tests/more_path/more_path.exp
Error: Sigma.js:13
 13:     x.c(); // error
           ^ property `c`. Property not found in
 13:     x.c(); // error
         ^ B

Error: Sigma.js:15
 15:     x++; // TODO no error? since unreachable (x: B implies x: A)
         ^^^ Cannot assign number to `x` because number [1] is incompatible with `B` [2].
  References:
   15:     x++; // TODO no error? since unreachable (x: B implies x: A)
           ^^^ [1]: number
   10: function bar(x:B) {
                      ^ [2]: `B`

Error: Sigma.js:15
 15:     x++; // TODO no error? since unreachable (x: B implies x: A)
         ^^^ number [1] is incompatible with `B` [2].
  References:
   15:     x++; // TODO no error? since unreachable (x: B implies x: A)
           ^^^ [1]: number
   10: function bar(x:B) {
                      ^ [2]: `B`

Error: Sigma.js:24
 24:     x.d(); // error
           ^ property `d`. Property not found in
 24:     x.d(); // error
         ^ C

Error: Sigma.js:27
 27:     x.c(); // error
           ^ property `c`. Property not found in
 27:     x.c(); // error
         ^ A

Error: Sigma.js:35
 35:   if (x instanceof A) {
                        ^ `A` [1] is incompatible with `D` [2].
  References:
    4: class A { a() {} }
             ^ [1]: `A`
   34: function baz(x:D) {
                      ^ [2]: `D`

Error: test.js:11
 11:     return obj.childProp_TYPO; // error (obj: ChildClass)
                    ^^^^^^^^^^^^^^ property `childProp_TYPO`. Property not found in
 11:     return obj.childProp_TYPO; // error (obj: ChildClass)
                ^^^ ChildClass


Found 7 errors
